--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 								<h1 class="display-4 font-weight-bold">My Website</h1>
 								<p class="lead text-white-50 mb-5">My name is Yusuf Ismail and I am a JavaScript coder. I have made a discord bot using node.js and i have made a previous website which you can find <a href=https://drismail.co.uk>here</a>. </p>
 								<a href="https://github.com/realyusufismail" class="btn btn-outline-light btn-lg ml-2 border-width-2">View My github</a>
-								<p>you can view my mod that i am currently working on by clicking <a href=https://www.curseforge.com/minecraft/mc-mods/ben-mob-mod>here</a></p>
+								<p>you can view my mod that i am currently working on by clicking <a href=https://www.curseforge.com/minecraft/mc-mods/ben-mob-mod class="btn btn-outline-light btn-lg ml-2 border-width-2">here</a></p>
 							</div>
 						</div>
 					</div>
