--- a/index.html
+++ b/index.html
@@ -45,9 +45,10 @@
 						<div class="row parallax" data-0-start="opacity:1; transform: translateY(0px);" data-0-end="opacity:0.1; transform: translateY(-30px);">
 							<div class="col-lg-7 col-md-8">
 								<h1 class="display-4 font-weight-bold">My Website</h1>
-								<p class="lead text-white-50 mb-5">My name is Yusuf Ismail and I am a JavaScript coder. I have made a discord bot using node.js and i have made a previous website which you can find <a href=https://drismail.co.uk>here</a>. </p>
+								<p class="lead text-white-50 mb-5">My name is Yusuf Ismail and I am a JavaScript coder. I have made a discord bot using node.js and i have made a previous website which you can find <a href=https://drismail.co.uk>here</a>. You can also view my minecraft mod by pressing the link below </p>
 								<a href="https://github.com/realyusufismail" class="btn btn-outline-light btn-lg ml-2 border-width-2">View My github</a>
-								<p>you can view my mod that i am currently working on by clicking <a href=https://www.curseforge.com/minecraft/mc-mods/ben-mob-mod class="btn btn-outline-light btn-lg ml-2 border-width-2">here</a></p>
+								<a href=https://www.curseforge.com/minecraft/mc-mods/ben-mob-mod class="btn btn-outline-light btn-lg ml-2 border-width-2">My Minecraft mod.</a></p>
+								<a href=https://github.com/realyusufismail/Moderationbot-with-other-features class="btn btn-outline-light btn-lg ml-2 border-width-2">My discord bot.</a></p>
 							</div>
 						</div>
 					</div>
