--- a/index.html
+++ b/index.html
@@ -33,6 +33,19 @@
 	<div id="wrapper" class="clearfix">
 		<header id="header" class="d-none">
 			<div id="header-wrap"></div>
+
+			<header id="header" class="full-header">
+			<div id="header-wrap">
+				<div class="container">
+					<div class="header-row">
+
+						<!-- Logo
+						============================================= -->
+						<div id="logo">
+							<a href="index.html" class="standard-logo" data-dark-logo="images/logo-dark.png"><img src="images/logo.png" alt="Canvas Logo"></a>
+							<a href="index.html" class="retina-logo" data-dark-logo="images/logo-dark@2x.png"><img src="images/logo@2x.png" alt="Canvas Logo"></a>
+						</div><!-- #logo end -->
+
 		</header>
 
 		<!-- Hero Section
@@ -60,14 +73,6 @@
 
 		<!-- Content
 		============================================= -->
-		<section id="content">
-			<div class="content-wrap py-0">
-				<div class="row justify-content-center align-items-center text-center min-vh-100">
-					<div class="col-12 display-3">About me <br>I have been coding for the past year and i have made a few projects and stored them on github. I find coding very fun. I also see coding as good future as a job. I am currently working on a minecraft mod which you view <a href=https://www.curseforge.com/minecraft/mc-mods/ben-mob-mod>here</a> or download it from here</div>
-				</div>
-			</div>
-		</section><!-- #content end -->
-
 
 	</div><!-- #wrapper end -->
 
