--- a/index.html
+++ b/index.html
@@ -33,19 +33,6 @@
 	<div id="wrapper" class="clearfix">
 		<header id="header" class="d-none">
 			<div id="header-wrap"></div>
-
-			<header id="header" class="full-header">
-			<div id="header-wrap">
-				<div class="container">
-					<div class="header-row">
-
-						<!-- Logo
-						============================================= -->
-						<div id="logo">
-							<a href="index.html" class="standard-logo" data-dark-logo="images/logo-dark.png"><img src="images/logo.png" alt="Canvas Logo"></a>
-							<a href="index.html" class="retina-logo" data-dark-logo="images/logo-dark@2x.png"><img src="images/logo@2x.png" alt="Canvas Logo"></a>
-						</div><!-- #logo end -->
-
 		</header>
 
 		<!-- Hero Section
@@ -60,8 +47,8 @@
 								<h1 class="display-4 font-weight-bold">My Website</h1>
 								<p class="lead text-white-50 mb-5">My name is Yusuf Ismail and I am a JavaScript coder. I have made a discord bot using node.js and i have made a previous website which you can find <a href=https://drismail.co.uk>here</a>. You can also view my minecraft mod by pressing the link below. </p>
 								<a href="https://github.com/realyusufismail" class="btn btn-outline-light btn-lg ml-2 border-width-2">View My github</a>
-								<a href=https://www.curseforge.com/minecraft/mc-mods/ben-mob-mod class="btn btn-outline-light btn-lg ml-2 border-width-2">My Minecraft mod.</a></p>
-								<a href=https://github.com/realyusufismail/Moderationbot-with-other-features class="btn btn-outline-light btn-lg ml-2 border-width-2">My discord bot.</a></p>
+								<a href=https://www.curseforge.com/minecraft/mc-mods/ben-mob-mod class="btn btn-outline-light btn-lg ml-2 border-width-2">My Minecraft mod</a></p>
+								<a href=https://github.com/realyusufismail/Moderationbot-with-other-features class="btn btn-outline-light btn-lg ml-2 border-width-2">My discord bot</a></p>
 							</div>
 						</div>
 					</div>
