--- a/index.html
+++ b/index.html
@@ -24,14 +24,84 @@
 	============================================= -->
 	<title>Home</title>
 
+	<style>
+		@media (min-width: 992px) {
+
+			.block-nav-header-2 #top-bar.transparent-topbar {
+				background: transparent !important;
+				z-index: 399;
+				border-bottom: 0;
+			}
+
+			.block-nav-header-2 .primary-menu {
+				border-top: 1px solid rgba(255,255,255,0.3);
+			}
+
+			.block-nav-header-2 .transparent-topbar + .transparent-header + #content {
+				margin-top: -163px; /*  #header(height) + #top-bar(height) */
+			}
+		}
+
+		.block-nav-header-2 .dark .top-links li > a,
+		.block-nav-header-2 .dark #top-social li a { color: #f5f5f5; }
+
+		.block-nav-header-2 .dark #top-social li,
+		.block-nav-header-2 .top-links-item { border-left: 0; }
+		html, body {margin: 0; height: 100%; overflow: hidden}
+	</style>
+
 </head>
 
 
-<body class="stretched">
+
+                <body class="stretched block-nav-header">
+                  <div id="top-bar" class="transparent-topbar dark py-md-2">
+			<div class="container">
+				<div class="row align-items-center">
+
+					<div class="col-12 col-lg-3 col-md-2">
+					</div>
+
+					<div class="col-12 col-lg-6 col-md-8">
+						<!-- Top Links
+						============================================= -->
+
+
+						<div class="top-links">
+							<ul class="top-links-container">
+								<li class="top-links-item px-1 ls2"><a href="demo-travel.html">Home</a></li>
+								<li class="top-links-item px-1 ls2"><a href="faqs.html">FAQs</a></li>
+								<li class="top-links-item px-1 ls2"><a href="contact.html">Contact</a></li>
+							</ul>
+						</div><!-- .top-links end -->
+					</div>
+
+					<div class="col-12 col-lg-3 col-md-2">
+
+						
+						<!-- Top Social
+						============================================= -->
+						<ul id="top-social" class="justify-content-center justify-content-lg-end">
+							<li><a href="#" class="si-facebook"><span class="ts-icon"><i class="icon-facebook"></i></span><span
+										class="ts-text">Facebook</span></a></li>
+							<li><a href="#" class="si-twitter"><span class="ts-icon"><i class="icon-twitter"></i></span><span
+										class="ts-text">Twitter</span></a></li>
+							<li><a href="#" class="si-pinterest"><span class="ts-icon"><i class="icon-pinterest"></i></span><span
+										class="ts-text">Pinterest</span></a></li>
+							<li><a href="#" class="si-instagram"><span class="ts-icon"><i class="icon-instagram2"></i></span><span
+										class="ts-text">Instagram</span></a></li>
+						</ul><!-- #top-social end -->
+
+					</div>
+				</div>
+
+			</div>
+			
+		</div><!-- #top-bar end -->
 
 	<!-- Document Wrapper
 	============================================= -->
-	<div id="wrapper" class="clearfix">
+	<div id="wrapper" class="fixed">
 		<header id="header" class="d-none">
 			<div id="header-wrap"></div>
 		</header>
@@ -43,7 +113,6 @@
 
 				<div class="vertical-middle">
 					<div class="container py-5 py-md-0">
-						<div class="row parallax" data-0-start="opacity:1; transform: translateY(0px);" data-0-end="opacity:0.1; transform: translateY(-30px);">
 							<div class="col-lg-7 col-md-8">
 								<h1 class="display-4 font-weight-bold">My Website</h1>
 								<p class="lead text-white-50 mb-5">My name is Yusuf Ismail and I am a JavaScript coder. I have made a discord bot using node.js and i have made a previous website which you can find <a href=https://drismail.co.uk>here</a>. You can also view my minecraft mod by pressing the link below. </p>
@@ -53,7 +122,6 @@
 							</div>
 						</div>
 					</div>
-				</div>
 
 			</div>
 
@@ -62,12 +130,10 @@
 		<!-- Content
 		============================================= -->
 
-	</div><!-- #wrapper end -->
+		<div class="header-wrap-clone"></div>
 
 	<!-- Go To Top
 	============================================= -->
-	<div id="gotoTop" class="icon-angle-up"></div>
-
 	<!-- JavaScripts
 	============================================= -->
 	<script src="js/jquery.js"></script>
