--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 						<div class="top-links">
 							<ul class="top-links-container">
 								<li class="top-links-item px-1 ls2"><a href="demo-travel.html">Home</a></li>
-								<li class="top-links-item px-1 ls2"><a href="faqs.html">FAQs</a></li>
+								<li class="top-links-item px-1 ls2"><a href="about-me.html">ABout me</a></li>
 								<li class="top-links-item px-1 ls2"><a href="contact.html">Contact</a></li>
 							</ul>
 						</div><!-- .top-links end -->
