--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html dir="ltr" lang="en-US">
 <head>
-<link rel="shortcut icon" href="images/logo.png" type="image/png">
+<link rel="shortcut icon" href="images/logo.jpg" type="image/jpg"	>
 
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="author" content="SemiColonWeb" />
@@ -70,7 +70,7 @@
 						<div class="top-links">
 							<ul class="top-links-container">
 								<li class="top-links-item px-1 ls2"><a href="demo-travel.html">Home</a></li>
-								<li class="top-links-item px-1 ls2"><a href="about-me.html">ABout me</a></li>
+								<li class="top-links-item px-1 ls2"><a href="about-me.html">About me</a></li>
 								<li class="top-links-item px-1 ls2"><a href="contact.html">Contact</a></li>
 							</ul>
 						</div><!-- .top-links end -->
@@ -82,14 +82,10 @@
 						<!-- Top Social
 						============================================= -->
 						<ul id="top-social" class="justify-content-center justify-content-lg-end">
-							<li><a href="#" class="si-facebook"><span class="ts-icon"><i class="icon-facebook"></i></span><span
-										class="ts-text">Facebook</span></a></li>
-							<li><a href="#" class="si-twitter"><span class="ts-icon"><i class="icon-twitter"></i></span><span
+							<li><a href="https://twitter.com/nowLearnDIgital" class="si-twitter"><span class="ts-icon"><i class="icon-twitter"></i></span><span
 										class="ts-text">Twitter</span></a></li>
-							<li><a href="#" class="si-pinterest"><span class="ts-icon"><i class="icon-pinterest"></i></span><span
-										class="ts-text">Pinterest</span></a></li>
-							<li><a href="#" class="si-instagram"><span class="ts-icon"><i class="icon-instagram2"></i></span><span
-										class="ts-text">Instagram</span></a></li>
+							<li><a href="https://github.com/realyusufismail" class="si-instagram"><span class="ts-icon"><i class="icon-github"></i></span><span
+										class="ts-text">Github</span></a></li>
 						</ul><!-- #top-social end -->
 
 					</div>
