--- a/about-me.html
+++ b/about-me.html
@@ -120,15 +120,15 @@
 
 					<div class="row">
 						<div class="col-lg-6">
-							<h3>Objective</h3>
+							<h3>Objective and who i am</h3>
 
-							<p>I want to become a full time coder in the future. </p>
+							<p>I want to become a full time coder in the future. I started coding in 2018 and thens started coding more in 2021 because of the lockdown in the world.  </p>
 						</div>
 
 						<div class="col-lg-6">
 							<h3>Projects made</h3>
 
-							<p></p>
+							<p> i have so far made 3 projects and is currently working on one. You can fin that mod <a href=mod.html>here</a>. I have also created a discord moderation bot and a website for my father which you can find <a href=www.drismail.co.uk></a></a></p>
 						</div>
 					</div>
 
