--- a/mod.html
+++ b/mod.html
@@ -20,7 +20,7 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>Hero | Canvas</title>
+	<title>Minecraft mod</title>
 
 	<style>
 		.block-hero-4 .font-secondary {
@@ -43,17 +43,20 @@
 			<div class="shape-divider" data-shape="wave-6" data-height="180" data-fill="#282828"></div>
 
 			<div class="container mw-sm text-center mt-6">
-				<h2 class="display-4 text-uppercase font-secondary mb-5 mt-4 gradient-text gradient-green-blue ls3">Welcome to the World of Canvas</h2>
-				<p class="px-5 text-white-50 lead mb-5">Lorem, ipsum dolor, sit amet consectetur adipisicing elit. Iure repellat animi praesentium sunt magni quia consectetur numquam vero incidunt enim.</p>
-				<a href="#" class="button button-xlarge button-dark gradient-green-blue mt-4 px-5 py-3 ls1"><i class="icon-appstore"></i> Download Now</a>
+				<h2 class="display-4 text-uppercase font-secondary mb-5 mt-4 gradient-text gradient-green-blue ls3">About my minecraft</h2>
+				<p class="px-5 text-white-50 lead mb-5">This is a mod for the villains and heroes in the ben 10 series. The villains will be created first and then the heroes.
+					<br>
+In this mod you will be able to fight villains such as Vilgax, Doctor Animo, ect and i will be adding heroes such as Quin but that is in the future. I am focusing on villains. I will be adding swords that were used in ben 10 such as Ascalon and i may add Annihilargh. note this weapon will destroy your world because this is what it does in the series. I will ad the hoverboard in Ben 10 Omniverse and also to have the best experience use  https://www.curseforge.com/minecraft/mc-mods/heroes-united-ben-10. In that mod you can use the omnitrix which means you can turn into Ben 10 transformation and use them against the villains. This mod will work with 1.16.5. I will be adding the dragon armour from the series first and also the sword Ascalon. </p>
+				<a href="mod/bentenmobmod1.4.5.jar" class="button button-xlarge button-dark gradient-green-blue mt-4 px-5 py-3 ls1"> <i class="icon-java" ></i> Download Now</a>
+					
 
 				<div class="clear"></div>
 
 			</div>
 
-			<a href="https://www.youtube.com/watch?v=P3Huse9K6Xs" data-lightbox="iframe" class="d-flex justify-content-center align-items-center text-center mt-6 rounded-xxxl shadow grid-inner min-vh-75 h-translate-y-lg all-ts" style="background-image: linear-gradient(rgba(0,0,0,0) 80%, #111 100%), url('images/blocks/preview/hero-4.jpg');">
-				<i class="icon-line-play h3 icon-stacked text-center rounded-circle pl-1 text-white h-bg-danger bg-ts icon-2x" style="background: rgba(255,255,255,0.1);"></i>
-			</a>
+			<a href="https://www.youtube.com/watch?v=P3Huse9K6Xs" data-lightbox="iframe" class="d-flex justify-content-center align-items-center text-center mt-6 rounded-xxxl shadow grid-inner min-vh-75 h-translate-y-lg all-ts" style="background-image: linear-gradient(rgba(0,0,0,0) 80%, #111 100%), url('images/Minecraft.png');">
+				
+				</a>
 
 			<div class="shape-divider" data-shape="wave-6" data-height="180" data-position="bottom" data-fill="#282828"></div>
 
