--- a/about-me.html
+++ b/about-me.html
@@ -4,6 +4,7 @@
 
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="author" content="SemiColonWeb" />
+	<link rel="shortcut icon" href="images/logo.jpg" type="image/jpg"	>
 
 	<!-- Stylesheets
 	============================================= -->
@@ -76,7 +77,7 @@
 								<ul class="top-links-container">
 									<li class="top-links-item px-1 ls2"><a href="demo-travel.html">Home</a></li>
 									<li class="top-links-item px-1 ls2"><a href="about-me.html">ABout me</a></li>
-									<li class="top-links-item px-1 ls2"><a href="contact.html">Contact</a></li>
+									<li class="top-links-item px-1 ls2"><a href="mod page">Mod page</a></li>
 								</ul>
 							</div><!-- .top-links end -->
 						</div>
