--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 							<ul class="top-links-container">
 								<li class="top-links-item px-1 ls2"><a href="demo-travel.html">Home</a></li>
 								<li class="top-links-item px-1 ls2"><a href="about-me.html">About me</a></li>
-								<li class="top-links-item px-1 ls2"><a href="contact.html">Contact</a></li>
+								<li class="top-links-item px-1 ls2"><a href="mod.html">Mod page</a></li>
 							</ul>
 						</div><!-- .top-links end -->
 					</div>
