--- a/mod.html
+++ b/mod.html
@@ -4,6 +4,7 @@
 
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="author" content="SemiColonWeb" />
+	<link rel="shortcut icon" href="images/logo.jpg" type="image/jpg"	>
 
 	<!-- Stylesheets
 	============================================= -->
@@ -27,6 +28,28 @@
 			font-family: 'Inter', sans-serif;
 			font-weight: 900;
 		}
+		@media (min-width: 992px) {
+
+.block-nav-header-2 #top-bar.transparent-topbar {
+	background: transparent !important;
+	z-index: 399;
+	border-bottom: 0;
+}
+
+.block-nav-header-2 .primary-menu {
+	border-top: 1px solid rgba(255,255,255,0.3);
+}
+
+.block-nav-header-2 .transparent-topbar + .transparent-header + #content {
+	margin-top: -163px; /*  #header(height) + #top-bar(height) */
+}
+}
+
+.block-nav-header-2 .dark .top-links li > a,
+.block-nav-header-2 .dark #top-social li a { color: #f5f5f5; }
+
+.block-nav-header-2 .dark #top-social li,
+.block-nav-header-2 .top-links-item { border-left: 0; }
 	</style>
 
 </head>
@@ -36,6 +59,46 @@
 	<!-- Document Wrapper
 	============================================= -->
 	<div id="wrapper" class="clearfix">
+		<div id="top-bar" class="transparent-topbar dark py-md-2">
+			<div class="container">
+				<div class="row align-items-center">
+
+					<div class="col-12 col-lg-3 col-md-2">
+					</div>
+
+					<div class="col-12 col-lg-6 col-md-8">
+						<!-- Top Links
+						============================================= -->
+
+
+						<div class="top-links">
+							<ul class="top-links-container">
+								<li class="top-links-item px-1 ls2"><a href="demo-travel.html">Home</a></li>
+								<li class="top-links-item px-1 ls2"><a href="about-me.html">About me</a></li>
+								<li class="top-links-item px-1 ls2"><a href="mod.html">mod page</a></li>
+							</ul>
+						</div><!-- .top-links end -->
+					</div>
+
+					<div class="col-12 col-lg-3 col-md-2">
+
+						
+						<!-- Top Social
+						============================================= -->
+						<ul id="top-social" class="justify-content-center justify-content-lg-end">
+							<li><a href="https://twitter.com/nowLearnDIgital" class="si-twitter"><span class="ts-icon"><i class="icon-twitter"></i></span><span
+										class="ts-text">Twitter</span></a></li>
+							<li><a href="https://github.com/realyusufismail" class="si-instagram"><span class="ts-icon"><i class="icon-github"></i></span><span
+										class="ts-text">Github</span></a></li>
+						</ul><!-- #top-social end -->
+
+					</div>
+				</div>
+
+			</div>
+			
+		</div><!-- #top-bar end -->
+
 
 		<!-- Hero Section
 		============================================= -->
