--- a/about-me.html
+++ b/about-me.html
@@ -75,7 +75,7 @@
 	
 							<div class="top-links">
 								<ul class="top-links-container">
-									<li class="top-links-item px-1 ls2"><a href="demo-travel.html">Home</a></li>
+									<li class="top-links-item px-1 ls2"><a href="index.html">Home</a></li>
 									<li class="top-links-item px-1 ls2"><a href="about-me.html">ABout me</a></li>
 									<li class="top-links-item px-1 ls2"><a href="mod page">Mod page</a></li>
 								</ul>
