--- a/mod.html
+++ b/mod.html
@@ -73,7 +73,7 @@
 
 						<div class="top-links">
 							<ul class="top-links-container">
-								<li class="top-links-item px-1 ls2"><a href="demo-travel.html">Home</a></li>
+								<li class="top-links-item px-1 ls2"><a href="index.html">Home</a></li>
 								<li class="top-links-item px-1 ls2"><a href="about-me.html">About me</a></li>
 								<li class="top-links-item px-1 ls2"><a href="mod.html">mod page</a></li>
 							</ul>
