--- a/about-me.html
+++ b/about-me.html
@@ -123,7 +123,7 @@
 						<div class="col-lg-6">
 							<h3>Objective and who i am</h3>
 
-							<p>I want to become a full time coder in the future. I started coding in 2018 and thens started coding more in 2021 because of the lockdown in the world.  </p>
+							<p>I want to become a full time coder in the future. I started coding in 2018 and then started coding more in 2021 because of the lockdown in the world.  </p>
 						</div>
 
 						<div class="col-lg-6">
