--- a/mod.html
+++ b/mod.html
@@ -75,11 +75,11 @@
 							<ul class="top-links-container">
 								<li class="top-links-item px-1 ls2"><a href="index.html">Home</a></li>
 								<li class="top-links-item px-1 ls2"><a href="about-me.html">About me</a></li>
-								<li class="top-links-item px-1 ls2"><a href="mod.html">mod page</a></li>
+								<li class="top-links-item px-1 ls2"><a href="mod.html">Mod page</a></li>
+								<li class="top-links-item px-1 ls2"><a href="contact.html">Contact me</a></li>
 							</ul>
 						</div><!-- .top-links end -->
 					</div>
-
 					<div class="col-12 col-lg-3 col-md-2">
 
 						
