--- a/index.html
+++ b/index.html
@@ -115,7 +115,10 @@
 								<a href="https://github.com/realyusufismail" class="btn btn-outline-light btn-lg ml-2 border-width-2">View My github</a>
 								<a href=https://www.curseforge.com/minecraft/mc-mods/ben-mob-mod class="btn btn-outline-light btn-lg ml-2 border-width-2">My Minecraft mod</a></p>
 								<a href=https://github.com/realyusufismail/Moderationbot-with-other-features class="btn btn-outline-light btn-lg ml-2 border-width-2">My discord bot</a></p>
-					                        <a href="https://www.patreon.com/bePatron?u=52835096" data-patreon-widget-type="become-patron-button">Become a Patron!</a><script async src="https://c6.patreon.com/becomePatronButton.bundle.js"></script>
+								<a href=https://gofund.me/abdcb233 class="btn btn-outline-light btn-lg ml-2 border-width-2">Donate to me</a></p>
+								
+
+
 							</div>
 						</div>
 					</div>
