--- a/index.html
+++ b/index.html
@@ -115,8 +115,7 @@
 								<a href="https://github.com/realyusufismail" class="btn btn-outline-light btn-lg ml-2 border-width-2">View My github</a>
 								<a href=https://www.curseforge.com/minecraft/mc-mods/ben-mob-mod class="btn btn-outline-light btn-lg ml-2 border-width-2">My Minecraft mod</a></p>
 								<a href=https://github.com/realyusufismail/Moderationbot-with-other-features class="btn btn-outline-light btn-lg ml-2 border-width-2">My discord bot</a></p>
-								<a href=https://gofund.me/abdcb233 class="btn btn-outline-light btn-lg ml-2 border-width-2">Donate to me</a></p>
-								
+								<div class="gfm-embed" data-url="https://www.gofundme.com/f/bvbqp-help-me-get-a-better-computer/widget/medium/"></div><script defer src="https://www.gofundme.com/static/js/embed.js"></script>
 
 
 							</div>
