--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 								<li class="top-links-item px-1 ls2"><a href="index.html">Home</a></li>
 								<li class="top-links-item px-1 ls2"><a href="about-me.html">About me</a></li>
 								<li class="top-links-item px-1 ls2"><a href="https://realyusufismail.github.io/custom-mod/">Mod page</a></li>
+								<li class="top-links-item px-1 ls2"><a href="toturial/index.html">Modding toturial</a></li>
 							</ul>
 						</div><!-- .top-links end -->
 					</div>
