--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 					<div class="container py-5 py-md-0">
 							<div class="col-lg-7 col-md-8">
 								<h1 class="display-4 font-weight-bold">My Website</h1>
-								<p class="lead text-white-50 mb-5">My name is Yusuf Ismail and I am a JavaScript coder. I have made a discord bot using node.js and i have made a previous website which you can find <a href=https://drismail.co.uk>here</a>. You can also view my minecraft mod by pressing the link below or going <a href=mod.html>here.</a> </p>
+								<p class="lead text-white-50 mb-5">My name is Yusuf Ismail and I am a Java coder. I have made a discord bot using node.js and i have made a previous website which you can find <a href=https://drismail.co.uk>here</a>. You can also view my minecraft mod by pressing the link below or going <a href=mod.html>here.</a> </p>
 								<a href="https://github.com/realyusufismail" class="btn btn-outline-light btn-lg ml-2 border-width-2">View My github</a>
 								<a href=https://www.curseforge.com/minecraft/mc-mods/ben-mob-mod class="btn btn-outline-light btn-lg ml-2 border-width-2">My Minecraft mod</a></p>
 								<a href=https://github.com/realyusufismail/Moderationbot-with-other-features class="btn btn-outline-light btn-lg ml-2 border-width-2">My discord bot</a></p>
