--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 							<ul class="top-links-container">
 								<li class="top-links-item"><a href="index.html">EN</a>
 									<ul class="top-links-sub-menu" style="width: 53px; left: 0;">	
-										<li class="top-links-item"><a href="#">AR(Coming soon)</a></li>
+										<li class="top-links-item"><a href="#">AR</a></li>
 									</ul>
 								</li>
 							</ul>
