--- a/about-me.html
+++ b/about-me.html
@@ -78,8 +78,10 @@
 									<li class="top-links-item px-1 ls2"><a href="index.html">Home</a></li>
 									<li class="top-links-item px-1 ls2"><a href="about-me.html">About me</a></li>
 									<li class="top-links-item px-1 ls2"><a href="https://realyusufismail.github.io/custom-mod/">Mod page</a></li>
-									<li class="top-links-item px-1 ls2"><a href="toturial/index.html">Modding toturial</a></li>
-							</ul>
+									<li class="top-links-item"><a href="">Mc Tutorials</a>
+									<ul class="top-links-sub-menu">
+										<li class="top-links-item"><a href="#">1.16 Tutorials</a></li>	
+									</ul>
 								</ul>
 							</div><!-- .top-links end -->
 						</div>
@@ -131,7 +133,7 @@
 						<div class="col-lg-6">
 							<h3>Projects made</h3>
 
-							<p> i have so far made 3 projects and is currently working on one. You can fin that mod <a href=mod.html>here</a>. I have also created a discord moderation bot and a website for my father which you can find <a href=www.drismail.co.uk></a></a></p>
+							<p> i have so far made 3 projects and i am currently working on two. You can find them here <a href=https://github.com/realyusufismail/custom-mod>first one is the main i am working on</a> and <a href=https://github.com/realyusufismail/armouranditemmod>the second one which i am working on.</a>  I have also created a discord moderation bot and a website for my father which you can find <a href=https://www.drismail.co.uk>here</a></p>
 						</div>
 					</div>
 
@@ -144,7 +146,45 @@
 
 		<!-- Footer
 		============================================= -->
+		<footer id="footer" class="dark">
+			<!-- Copyrights
+			============================================= -->
+			<div id="copyrights">
+				<div class="container">
+
+					<div class="row col-mb-30">
+
+						<div class="col-md-6 text-center text-md-start">
+							Copyrights &copy; 2021 All Rights Reserved by Yusuf Ismail.<br>
+							<div class="copyright-links"><a href="#">Terms of Use</a> / <a href="#">Privacy Policy</a></div>
+						</div>
+
+						<div class="col-md-6 text-center text-md-end">
+							<div class="d-flex justify-content-center justify-content-md-end">				
+								<a href="https://github.com/realyusufismail" class="social-icon si-small si-borderless si-patreon">
+									<i class="icon-patreon"></i>
+									<i class="icon-patreon"></i>
+								</a>
+								<a href="ttps://www.youtube.com/channel/UC1RUkzjpWtp4w3OoMKh7pGg" class="social-icon si-small si-borderless si-youtube">
+									<i class="icon-youtube"></i>
+									<i class="icon-youtube"></i>
+								</a>
+								<a href="https://github.com/realyusufismail" class="social-icon si-small si-borderless si-github">
+									<i class="icon-github"></i>
+									<i class="icon-github"></i>
+								</a>
+
 	
+							</div>
+
+							<div class="clear"></div>
+						</div>
+
+					</div>
+
+				</div>
+			</div><!-- #copyrights end -->
+		</footer><!-- #footer end -->
 
 	</div><!-- #wrapper end -->
 
