--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 							<ul class="top-links-container">
 								<li class="top-links-item"><a href="index.html">EN</a>
 									<ul class="top-links-sub-menu" style="width: 53px; left: 0;">	
-										<li class="top-links-item"><a href="#">AR</a></li>
+										<li class="top-links-item"><a href="coming-soon.html">AR</a></li>
 									</ul>
 								</li>
 							</ul>
@@ -81,14 +81,13 @@
 								<li class="top-links-item px-1 ls2"><a href="index.html">Home</a></li>
 								<li class="top-links-item px-1 ls2"><a href="about-me.html">About me</a></li>
 								<li class="top-links-item px-1 ls2"><a href="https://realyusufismail.github.io/custom-mod/">Mod page</a></li>
-								<li class="top-links-item"><a href="index.html">Mc Tutorials</a>
+								<li class="top-links-item"><a href="">Mc Tutorials</a>
 								<ul class="top-links-sub-menu">
 									<li class="top-links-item"><a href="#">1.16 Tutorials</a></li>	
 								</ul>
 							</ul>
 						</div><!-- .top-links end -->
 					</div>
-
 
 				
 					<div class="col-12 col-lg-3 col-md-2">
