--- a/about-me.html
+++ b/about-me.html
@@ -22,7 +22,7 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>About Me | Canvas</title>
+	<title>About Me | RealYusufIsmail</title>
 
 	<style>
 		@media (min-width: 992px) {
@@ -49,6 +49,16 @@
 		.block-nav-header-2 .top-links-item { border-left: 0; }
 		.block-nav-header-2 .top-links-item { border-left: 0; }
 	</style>
+	<div id="nav-placeholder">
+
+	</div>
+	<script>
+	
+		$(function(){
+		  $("#nav-placeholder").load("nav.html");
+		   $("#footer").load("footer.html");
+		});
+		</script>
 
 </head>
 
@@ -62,48 +72,7 @@
 		============================================= -->
 		<header id="header" class="full-header transparent-header dark" data-sticky-class="not-dark">
 			<div id="top-bar" class="transparent-topbar dark py-md-2">
-				<div class="container">
-					<div class="row align-items-center">
-	
-						<div class="col-12 col-lg-3 col-md-2">
-						</div>
-	
-						<div class="col-12 col-lg-6 col-md-8">
-							<!-- Top Links
-							============================================= -->
-	
-	
-							<div class="top-links">
-								<ul class="top-links-container">
-									<li class="top-links-item px-1 ls2"><a href="index.html">Home</a></li>
-									<li class="top-links-item px-1 ls2"><a href="about-me.html">About me</a></li>
-									<li class="top-links-item px-1 ls2"><a href="https://realyusufismail.github.io/custom-mod/">Mod page</a></li>
-									<li class="top-links-item"><a href="">Mc Tutorials</a>
-									<ul class="top-links-sub-menu">
-										<li class="top-links-item"><a href="#">1.16 Tutorials</a></li>	
-									</ul>
-								</ul>
-							</div><!-- .top-links end -->
-						</div>
-	
-						<div class="col-12 col-lg-3 col-md-2">
-	
-							
-							<!-- Top Social
-							============================================= -->
-							<ul id="top-social" class="justify-content-center justify-content-lg-end">
-								<li><a href="https://twitter.com/nowLearnDIgital" class="si-twitter"><span class="ts-icon"><i class="icon-twitter"></i></span><span
-											class="ts-text">Twitter</span></a></li>
-								<li><a href="https://github.com/realyusufismail" class="si-instagram"><span class="ts-icon"><i class="icon-github"></i></span><span
-											class="ts-text">Github</span></a></li>
-							</ul><!-- #top-social end -->
-	
-						</div>
-					</div>
-	
-				</div>
 				
-			</div><!-- #top-bar end -->
 		</header><!-- #header end -->
 
 		<!-- Page Title
