--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>Home</title>
+	<title>Home | RealYusufIsmail</title>
 
 	<style>
 		@media (min-width: 992px) {
