--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>Contact</title>
+	<title>Contact | RealYusufIsmail</title>
 
 </head>
 
