--- a/about-me.html
+++ b/about-me.html
@@ -81,7 +81,7 @@
 
 			<div class="container clearfix">
 				<h1>Yusuf Ismail</h1>
-				<span>A JavaScript coder</span>
+				<span>A Java coder</span>
 			</div>
 
 		</section><!-- #page-title end -->
@@ -115,45 +115,7 @@
 
 		<!-- Footer
 		============================================= -->
-		<footer id="footer" class="dark">
-			<!-- Copyrights
-			============================================= -->
-			<div id="copyrights">
-				<div class="container">
-
-					<div class="row col-mb-30">
-
-						<div class="col-md-6 text-center text-md-start">
-							Copyrights &copy; 2021 All Rights Reserved by Yusuf Ismail.<br>
-							<div class="copyright-links"><a href="#">Terms of Use</a> / <a href="#">Privacy Policy</a></div>
-						</div>
-
-						<div class="col-md-6 text-center text-md-end">
-							<div class="d-flex justify-content-center justify-content-md-end">				
-								<a href="https://github.com/realyusufismail" class="social-icon si-small si-borderless si-patreon">
-									<i class="icon-patreon"></i>
-									<i class="icon-patreon"></i>
-								</a>
-								<a href="ttps://www.youtube.com/channel/UC1RUkzjpWtp4w3OoMKh7pGg" class="social-icon si-small si-borderless si-youtube">
-									<i class="icon-youtube"></i>
-									<i class="icon-youtube"></i>
-								</a>
-								<a href="https://github.com/realyusufismail" class="social-icon si-small si-borderless si-github">
-									<i class="icon-github"></i>
-									<i class="icon-github"></i>
-								</a>
-
-	
-							</div>
-
-							<div class="clear"></div>
-						</div>
-
-					</div>
-
-				</div>
-			</div><!-- #copyrights end -->
-		</footer><!-- #footer end -->
+		
 
 	</div><!-- #wrapper end -->
 
