--- a/about-me.html
+++ b/about-me.html
@@ -115,7 +115,10 @@
 
 		<!-- Footer
 		============================================= -->
+		<div id="footer">
 		
+		</div>
+
 
 	</div><!-- #wrapper end -->
 
