--- a/nav.html
+++ b/nav.html
@@ -18,6 +18,8 @@
             <!-- Top Links
             ============================================= -->
 
+	<nav id="primary-menu" class="style-2 center">
+
 
             <div class="top-links">
                 <ul class="top-links-container">
@@ -53,3 +55,4 @@
 
 </div>
 </div><!-- #top-bar end -->
+</nav><!-- #primary-menu end -->
