--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
 	<link rel="stylesheet" href="css/font-icons.css" type="text/css" />
 	<link rel="stylesheet" href="css/animate.css" type="text/css" />
 	<link rel="stylesheet" href="css/magnific-popup.css" type="text/css" />
-
+	<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 	<link rel="stylesheet" href="css/custom.css" type="text/css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -68,12 +68,7 @@
 							<span>Try the search below to find matching pages:</span>
 						</div>
 
-						<form action="#" method="get" class="mx-auto mb-0">
-							<div class="input-group input-group-lg">
-								<input type="text" class="form-control" placeholder="Search for Pages...">
-								<button class="btn btn-danger" type="button"><i class="icon-line-search"></i></button>
-							</div>
-						</form>
+					
 
 					</div>
 				</div>
@@ -83,7 +78,9 @@
 
 		<!-- Footer
 		============================================= -->
-		<footer id="footer" class="dark">
+		<div id="footer">
+		
+		</div>
 			<div class="container">
 
 				<!-- Footer Widgets
