--- a/about-me.html
+++ b/about-me.html
@@ -15,7 +15,7 @@
 	<link rel="stylesheet" href="css/font-icons.css" type="text/css" />
 	<link rel="stylesheet" href="css/animate.css" type="text/css" />
 	<link rel="stylesheet" href="css/magnific-popup.css" type="text/css" />
-
+	<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 	<link rel="stylesheet" href="css/custom.css" type="text/css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -23,7 +23,7 @@
 	<!-- Document Title
 	============================================= -->
 	<title>About Me | RealYusufIsmail</title>
-
+	
 	<style>
 		@media (min-width: 992px) {
 
