--- a/about-me.html
+++ b/about-me.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
-<html dir="ltr" lang="en-US">
-<head>
-
+<html dir="ltr" lang="en-US"> <head src="https://code.jquery.com/jquery-1.10.2.js">
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="author" content="SemiColonWeb" />
 	<link rel="shortcut icon" href="images/logo.jpg" type="image/jpg"	>
@@ -16,6 +14,7 @@
 	<link rel="stylesheet" href="css/animate.css" type="text/css" />
 	<link rel="stylesheet" href="css/magnific-popup.css" type="text/css" />
 	<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+
 	<link rel="stylesheet" href="css/custom.css" type="text/css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
