--- a/404.html
+++ b/404.html
@@ -4,6 +4,8 @@
 
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="author" content="SemiColonWeb" />
+	<link rel="shortcut icon" href="images/logo.jpg" type="image/jpg"	>
+
 
 	<!-- Stylesheets
 	============================================= -->
