--- a/nav.html
+++ b/nav.html
@@ -28,7 +28,7 @@
                     <li class="top-links-item px-1 ls2"><a href="https://realyusufismail.github.io/custom-mod/">Mod page</a></li>
                     <li class="top-links-item"><a href="">Mc Tutorials</a>
                     <ul class="top-links-sub-menu">
-                        <li class="top-links-item"><a href="#">1.16 Tutorials</a></li>	
+                        <li class="top-links-item"><a href="1.16-tutorials.html">1.16 Tutorials</a></li>	
                     </ul>
                 </ul>
             </div><!-- .top-links end -->
