--- a/armour-potion-effects.html
+++ b/armour-potion-effects.html
@@ -114,7 +114,8 @@
 									============================================= -->
 									<div class="entry-content mt-0">
 
-										<p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</p>
+										<h1>Important</h1>
+										<p>Before this make sure you have done the tutorial by cy4 for armour and items. <a href="https://www.youtube.com/watch?v=benUZaQU-6Y&list=PLlbkaeFHn13HQlW5Pb7Gf-xLJoAlfVbNU">Cy4 Modding tutorialr</a></p>
 
 										<p>Nullam id dolor id nibh ultricies vehicula ut id elit. <a href="#">Curabitur blandit tempus porttitor</a>. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Donec id elit non mi porta gravida at eget metus. Vestibulum id ligula porta felis euismod semper.</p>
 
@@ -143,13 +144,13 @@
         <!-- Footer
 		============================================= -->
 		
-				<!-- Footer Widgets
-				============================================= -->
+			
 				
-				<div id="footer">
+		<div id="footer" style="margin-top: 0px;">
 		
-				</div>
-		
+		</div>
+
+
 	</div><!-- #wrapper end -->
 
 	<!-- Go To Top
