--- a/armour-potion-effects.html
+++ b/armour-potion-effects.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html dir="ltr" lang="en-US"> <head src="https://code.jquery.com/jquery-1.10.2.js">
-	<head>
-
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="author" content="SemiColonWeb" />
 	<link rel="shortcut icon" href="images/logo.jpg" type="image/jpg"	>
-
 
 	<!-- Stylesheets
 	============================================= -->
@@ -20,6 +17,8 @@
 
 	<link rel="stylesheet" href="css/custom.css" type="text/css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+
 
 	<!-- Document Title
     ============================================= -->
@@ -47,8 +46,7 @@
 
 		.block-nav-header-2 .dark #top-social li,
 		.block-nav-header-2 .top-links-item { border-left: 0; }
-
-
+		.block-nav-header-2 .top-links-item { border-left: 0; }
 	</style>
 	<div id="nav-placeholder">
 
@@ -60,8 +58,9 @@
 		   $("#footer").load("footer.html");
 		});
 		</script>
-		
+
 </head>
+
 <body class="stretched">
 
 	<!-- Document Wrapper
@@ -70,14 +69,9 @@
 
 		<!-- Header
 		============================================= -->
-		<header id="header" class="full-header">
-			<div id="header-wrap">
-		
-
-					</div>
-				</div>
-			</div>
-			<div class="header-wrap-clone"></div>
+		<header id="header" class="full-header transparent-header dark" data-sticky-class="not-dark">
+			<div id="top-bar" class="transparent-topbar dark py-md-2">
+				
 		</header><!-- #header end -->
 
 		<!-- Page Title
@@ -146,9 +140,13 @@
 		
 			
 				
-		<div id="footer" style="margin-top: 0px;">
+		<div id="footer">
 		
 		</div>
+
+
+	</div><!-- #wrapper end -->
+
 
 
 	</div><!-- #wrapper end -->
