--- a/armour-potion-effects.html
+++ b/armour-potion-effects.html
@@ -111,7 +111,9 @@
 										<h1>Important</h1>
 										<p>Before this make sure you have done the tutorial by cy4 for armour and items. <a href="https://www.youtube.com/watch?v=benUZaQU-6Y&list=PLlbkaeFHn13HQlW5Pb7Gf-xLJoAlfVbNU">Cy4 Modding tutorialr</a></p>
 
-										<p>Nullam id dolor id nibh ultricies vehicula ut id elit. <a href="#">Curabitur blandit tempus porttitor</a>. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Donec id elit non mi porta gravida at eget metus. Vestibulum id ligula porta felis euismod semper.</p>
+
+										<h2>How to add potion affects to armour</h2>
+										<p>Step 1: create a folder called events as seen here. <img src="images/events.png" alt="Italian Trulli"></p>
 
 										<blockquote><p>Vestibulum id ligula porta felis euismod semper. Sed posuere consectetur est at lobortis. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper.</p></blockquote>
 
