--- a/tutorial-coming-soon.html
+++ b/tutorial-coming-soon.html
@@ -67,8 +67,8 @@
 				<div class="container">
 
 					<div class="heading-block text-center border-bottom-0">
-						<h1>I have not started yet</h1>
-						<span>Please check back again within a few weeks or month</span>
+						<h1>Comming soon</h1>
+						<span>Please check back again within a few days or weeks.</span>
 					</div>
 
 					<div id="countdown-ex1" class="countdown countdown-large mx-auto bottommargin" data-year="2021" style="max-width:700px;"></div>
@@ -76,7 +76,7 @@
 					<div class="clear"></div>
 
 					<div class="progress topmargin mx-auto" style="height: 10px; max-width:600px;">
-						<div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="0" style="width: 0%">
+						<div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="0" style="width: 10%">
 						</div>
 					</div>
 
