--- a/index.html
+++ b/index.html
@@ -49,7 +49,13 @@
 		.block-nav-header-2 .top-links-item { border-left: 0; }
 		html, body {margin: 0; height: 100%; overflow: hidden}
 	</style>
-
+<script>
+	
+	$(function(){
+	
+	   $("#footer").load("footer.html");
+	});
+	</script>
 </head>
 
 
@@ -139,6 +145,9 @@
 			</div>
 
 		</section>
+		<div id="footer">
+		
+		</div>
 
 		<!-- Content
 		============================================= -->
