--- a/crafting-recipes.html
+++ b/crafting-recipes.html
@@ -107,7 +107,7 @@
 									<!-- Entry Content
 									============================================= -->
 									<div class="entry-content mt-0">
-
+<h1>This is about How to create a smelting and blasting recipes with data generator. in 1.16.5(new mapping)</h1>
 							
 
 <p>You are done with this tutorial.</p>
