--- a/crafting-recipes.html
+++ b/crafting-recipes.html
@@ -83,7 +83,7 @@
 				<span>All my mc tutorials for 1.16.5</span>
 				<ol class="breadcrumb">
 					<li class="breadcrumb-item"><a href="index.htmls">Home</a></li>
-					<li class="breadcrumb-item active" aria-current="page">Mc 1.16.5 tutorials</li>
+					<li class="breadcrumb-item active" aria-current="page">Mc 1.16.5 tutorials.This is how to create a crafting recipes with data generator and without. in 1.16.5(new mapping)</li>
 				</ol>
 			</div>
 
@@ -107,7 +107,9 @@
 									<!-- Entry Content
 									============================================= -->
 									<div class="entry-content mt-0">
-<h1>This is about How to create a smelting and blasting recipes with data generator. in 1.16.5(new mapping)</h1>
+<h1>Important</h1>
+
+<p>Use a Data generator if you are adding more than a couple of items in your mod. Part 1 will be creating a recipe in a json file were as part 2 is adding a recipe in a Data generator. So lets get started.</p>
 							
 
 <p>You are done with this tutorial.</p>
