--- a/coming-soon.html
+++ b/coming-soon.html
@@ -67,7 +67,7 @@
 				<div class="container">
 
 					<div class="heading-block text-center border-bottom-0">
-						<h1>I have not started yet</h1>
+						<h1>I have started.</h1>
 						<span>Please check back again within a few weeks or month</span>
 					</div>
 
