--- a/ar-index.html
+++ b/ar-index.html
@@ -83,7 +83,7 @@
 								<li class="top-links-item px-1 ls2"><a href="#">صفحة التعديل</a></li>
 								<li class="top-links-item"><a href="#">دروس ماين كرافت</a>
 								<ul class="top-links-sub-menu">
-									<li class="top-links-item"><a href="#.html">1.16 دروس/a></li>	
+									<li class="top-links-item"><a href="#">1.16 دروس</a></li>	
 								</ul>
 							</ul>
 						</div><!-- .top-links end -->
