--- a/ar-nav.html
+++ b/ar-nav.html
@@ -18,20 +18,19 @@
             <!-- Top Links
             ============================================= -->
 
-	<nav id="primary-menu" class="style-2 center">
-
-        <div class="top-links">
-            <ul class="top-links-container">
-                <li class="top-links-item px-1 ls2"><a href="ar-index.html">بيت</a></li>
-                <li class="top-links-item px-1 ls2"><a href="#">عني</a></li>
-                <li class="top-links-item px-1 ls2"><a href="#">صفحة التعديل</a></li>
-                <li class="top-links-item"><a href="#">دروس ماين كرافت</a>
-                <ul class="top-links-sub-menu">
-                    <li class="top-links-item"><a href="#">1.16 دروس</a></li>	
+            <div class="top-links">
+                <ul class="top-links-container">
+                    <li class="top-links-item px-1 ls2"><a href="ar-index.html">بيت</a></li>
+                    <li class="top-links-item px-1 ls2"><a href="coming-soon.html">عني</a></li>
+                    <li class="top-links-item px-1 ls2"><a href="coming-soon.html">صفحة التعديل</a></li>
+                    <li class="top-links-item"><a href="coming-soon.html">دروس ماين كرافت</a>
+                    <ul class="top-links-sub-menu">
+                        <li class="top-links-item"><a href="coming-soon.html">1.16 دروس</a></li>	
+                    </ul>
                 </ul>
-            </ul>
-        </div><!-- .top-links end -->
-    </div>
+            </div><!-- .top-links end -->
+        </div>
+
 
     
         <div class="col-12 col-lg-3 col-md-2">
