--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 							<ul class="top-links-container">
 								<li class="top-links-item"><a href="index.html">EN</a>
 									<ul class="top-links-sub-menu" style="width: 53px; left: 0;">	
-										<li class="top-links-item"><a href="coming-soon.html">AR</a></li>
+										<li class="top-links-item"><a href="ar-index.html">AR</a></li>
 									</ul>
 								</li>
 							</ul>
