--- a/footer.html
+++ b/footer.html
@@ -9,7 +9,7 @@
 
                 <div class="col-md-6 text-center text-md-start">
                     Copyrights &copy; 2021 All Rights Reserved by Yusuf Ismail.<br>
-                    <div class="copyright-links"><a href="#">Terms of Use</a> / <a href="privacy-policy.html">Privacy Policy</a></div>
+                    <div class="copyright-links"><a href="terms-of-use.html">Terms of Use</a> / <a href="privacy-policy.html">Privacy Policy</a></div>
                 </div>
 
                 <div class="col-md-6 text-center text-md-end">
